add ability to block players from using certain named text colors add placeholder resolver to mm wrapper for future update